Fixes iOS `orientationchange` bug. See http://stackoverflow.com/questions/12515058/ios6-safari-orientation-change-bug for explanation.

--- a/app/style/app.less
+++ b/app/style/app.less
@@ -23,6 +23,7 @@
 
 // ***** HEADER
 #header {
+    overflow: hidden; // ios bug fix
     height: unit(@header-height, px);
     padding: 0 .4em 0 0;
     background-color: rgba(255, 255, 255, 0.9);
